// Copyright 2022 The Engula Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package serverpb.v1;

import "eraft.proto";
import "engula/server/v1/metadata.proto";
import "v1/metadata.proto";

service Raft {
  rpc SendMessage(stream RaftMessage) returns (RaftDone) {}
  rpc RetriveSnapshot(SnapshotRequest) returns (stream SnapshotChunk) {}
}

message RaftMessage {
  uint64 group_id = 1;

  engula.server.v1.ReplicaDesc from_replica = 2;
  engula.server.v1.ReplicaDesc to_replica = 3;

  repeated eraftpb.Message messages = 4;
}

message RaftDone {}

message SnapshotRequest {
  uint64 replica_id = 1;

  bytes snapshot_id = 2;
}

message SnapshotChunk {
    oneof value {
        SnapshotFile file = 1;
        SnapshotMeta meta = 2;
        bytes chunk_data = 3;
    }
}
